--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,6 @@ terraform.rc
 
 
 terraform.tfvars
-terraform.tfstate
+setup-scripts/terraform.tfstate
 terraform.tfstate.backup
 .terraform.lock.hcl
